Issue 799 - Working HTTP Authentication as an Authentication method.